--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,15 @@ jobs:
       - run: npm ci
       - run: npm test
           
+  build-and-push-docker-image:
+    name: Build and push docker build-and-push-docker-image
+    runs-on: ubuntu-latest
+    needs: test
+    environment: nomad-stage
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+      - run:docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD}}
+      - run: docker build -t jitesh86/nomad .
+      - run: docker push jitesh86/nomad
+
