--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,3 +43,18 @@ jobs:
       - run: docker build -t jitesh86/nomad .
       - run: docker push jitesh86/nomad
 
+  build-ami: 
+    name: Build AMI image
+    env:
+      PKR_VAR_docker_username: ${{secrets.DOCKER_USERNAME}}
+      PKR_VAR_docker_password: ${{ secrets.DOCKER_PASSWORD}}
+    environment: nomad-stage
+    runs-on: ubuntu-latest
+    needs: build-and-push-docker-image
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+      - run: bash .deploy/scripts/packer-install.sh
+      - run: cd .deploy/packer && packer validate image.pkr.hcl
+      - name: build ami image 
+        run: cd ./deploy/packer && packer build image.pkr.hcl
