--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,4 @@ jobs:
       - run: bash .deploy/scripts/packer-install.sh
       - run: cd .deploy/packer && packer validate image.pkr.hcl
       - name: build ami image 
-        run: cd ./deploy/packer && packer build image.pkr.hcl
+        run: cd .deploy/packer && packer build image.pkr.hcl
